Minor plist poke.

--- a/Info.plist
+++ b/Info.plist
@@ -10,7 +10,7 @@
 	<array>
 		<dict>
 			<key>CFBundleTypeIconFile</key>
-			<string>package.icns</string>
+			<string>package</string>
 			<key>CFBundleTypeName</key>
 			<string>Gamebox</string>
 			<key>CFBundleTypeRole</key>
@@ -70,6 +70,8 @@
 				<string>com.microsoft.virtualpc-disk-image</string>
 				<string>com.apple.disk-image-ndif</string>
 			</array>
+			<key>LSTypeIsPackage</key>
+			<false/>
 			<key>NSDocumentClass</key>
 			<string>BXSession</string>
 		</dict>
@@ -84,12 +86,14 @@
 			<array>
 				<string>net.washboardabs.boxer-disk-bundle</string>
 			</array>
+			<key>LSTypeIsPackage</key>
+			<true/>
 			<key>NSDocumentClass</key>
 			<string>BXSession</string>
 		</dict>
 		<dict>
 			<key>CFBundleTypeIconFile</key>
-			<string>executable.icns</string>
+			<string>executable</string>
 			<key>CFBundleTypeName</key>
 			<string>DOS/Windows Executable</string>
 			<key>CFBundleTypeRole</key>
@@ -102,6 +106,8 @@
 				<string>com.microsoft.msdos-executable</string>
 				<string>com.microsoft.batch-file</string>
 			</array>
+			<key>LSTypeIsPackage</key>
+			<false/>
 			<key>NSDocumentClass</key>
 			<string>BXSession</string>
 		</dict>
@@ -338,6 +344,7 @@
 		<dict>
 			<key>UTTypeConformsTo</key>
 			<array>
+				<string>public.text</string>
 				<string>public.script</string>
 				<string>public.executable</string>
 			</array>
