--- a/Info.plist
+++ b/Info.plist
@@ -5,7 +5,7 @@
 	<key>BugReportURL</key>
 	<string>http://boxerapp.com/report-an-issue</string>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>English</string>
+	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
