--- a/Standalone/Boxer Standalone-Info.plist
+++ b/Standalone/Boxer Standalone-Info.plist
@@ -9,7 +9,7 @@
 	<key>BXOrganizationWebsiteURL</key>
 	<string>{{ORGANIZATION_URL}}</string>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>English</string>
+	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
