Migrate to DOSBox-Staging. Work around issues caused by C++14.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,12 +7,12 @@
 [submodule "Vendor/Boxer-MT32Emu"]
 	path = Vendor/MT32Emu
 	url = https://github.com/MaddTheSane/Boxer-MT32Emu.git
-[submodule "DOSBox"]
-	path = DOSBox
-	url = https://github.com/MaddTheSane/dosbox.git
 [submodule "Vendor/CwlDemangle"]
 	path = Vendor/CwlDemangle
 	url = https://github.com/MaddTheSane/CwlDemangle.git
 [submodule "Vendor/OpenEmuShaders"]
 	path = Vendor/OpenEmuShaders
 	url = https://github.com/OpenEmu/OpenEmu-Shaders.git
+[submodule "DOSBox-Staging"]
+	path = DOSBox-Staging
+	url = https://github.com/MaddTheSane/dosbox-staging.git
