--- a/.github/workflows/xcode.yml
+++ b/.github/workflows/xcode.yml
@@ -14,13 +14,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Checkout submodules
-        uses: actions/checkout@v2
-          shell: bash
-          run: |
-            auth_header="$(git config --local --get http.https://github.com/.extraheader)"
-            git submodule sync --recursive
-            git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
+          with:
+            submodules: recursive
       - name: Build Boxer
         env:
           platform: ${{ 'Mac OS X' }}
