--- a/.github/workflows/xcode.yml
+++ b/.github/workflows/xcode.yml
@@ -20,9 +20,9 @@ jobs:
         env:
           platform: ${{ 'Mac OS X' }}
         run: |
-          xcodebuild -target "Boxer"
+          xcodebuild -target "Boxer" -configuration "Release"
       - name: Build Boxer Bundler
         env:
           platform: ${{ 'Mac OS X' }}
         run: |
-          xcodebuild -target "Boxer Bundler"
+          xcodebuild -target "Boxer Bundler" -configuration "Release"
