--- a/.github/workflows/xcode.yml
+++ b/.github/workflows/xcode.yml
@@ -20,7 +20,9 @@ jobs:
         env:
           platform: ${{ 'Mac OS X' }}
         run: |
-          xcodebuild -derivedDataPath ./build -workspace Boxer.xcworkspace -scheme "Boxer CI" -configuration "Release" clean
+          cd Vendor/OpenEmuShaders/3rdparty
+          make clean
+          cd ../../..
           xcodebuild -derivedDataPath ./build -workspace Boxer.xcworkspace -scheme "Boxer CI" -configuration "Release"
       - name: Build Boxer Bundler
         env:
