--- a/Info.plist
+++ b/Info.plist
@@ -69,6 +69,7 @@
 				<string>com.winimage.raw-disk-image</string>
 				<string>com.microsoft.virtualpc-disk-image</string>
 				<string>com.apple.disk-image-ndif</string>
+				<string>com.apple.disk-image-udif</string>
 			</array>
 			<key>LSTypeIsPackage</key>
 			<false/>
