--- a/Frameworks/SDL2.framework/Versions/A/Resources/Info.plist
+++ b/Frameworks/SDL2.framework/Versions/A/Resources/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>19G60d</string>
+	<string>21A559</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
@@ -19,7 +19,7 @@
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.0.13</string>
+	<string>2.0.19</string>
 	<key>CFBundleSignature</key>
 	<string>SDLX</string>
 	<key>CFBundleSupportedPlatforms</key>
@@ -27,24 +27,24 @@
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>2.0.13</string>
+	<string>2.0.19</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>12A8161k</string>
+	<string>13A1030d</string>
 	<key>DTPlatformName</key>
 	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>11.0</string>
+	<string>12.0</string>
 	<key>DTSDKBuild</key>
-	<string>20A5299v</string>
+	<string>21A344</string>
 	<key>DTSDKName</key>
-	<string>macosx11.0</string>
+	<string>macosx12.0</string>
 	<key>DTXcode</key>
-	<string>1200</string>
+	<string>1310</string>
 	<key>DTXcodeBuild</key>
-	<string>12A8161k</string>
+	<string>13A1030d</string>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.6</string>
+	<string>10.9</string>
 </dict>
 </plist>
